<resources>
    <string name="app_name">Qashqar Rubob ijrochiligi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_title">Qashqar rubob ijrochiligi</string>
    <string name="splash_description">Ilk o’rganuvchilar uchun elektron o’quv qo’llanma</string>
    <string name="splash_author_name">Husniddin Tursunov</string>
    <string name="example_text">Cholg’u tarixi, sozlanishi va tuzilishi</string>
    <string name="usage_description">Ushbu ilova: O‘zbekiston Respublikasi Prezidentining qarori, 02.02.2022 yildagi PQ-112-son qarorida 2022/2023 o‘quv yilidan boshlab ta’lim muassasalarida o‘quvchi va talabalarning musiqiy bilim va ko‘nikmalarini oshirish, ularning qalbida milliy madaniyatga bo‘lgan muhabbatni shakllantirish kabi belgilab berilgan qaror loyihasiga asosan tayyorlandi.\n\nEslatma!!! Ushbu ilovadan foydalanish uchun Qashqar rubob cholg‘usini o‘rganuvchi, menyular satri ketma-ketligi bo‘yicha o‘zlashtirib borilishini maqsad qilib olishi zarur, shunda ijobiy natijalarga erisha oladi.\n\n<b>Demak!</b>\n<b>1. Cholg‘u tarixi, sozlanishi va tuzilishi: </b>Ushbu menyuda siz Qashqar rubob cholg‘usining qisqacha tarixi, cholg‘u torlarini sozlanishi va tuzilishi haqida tanishasiz. Bu ilk o‘rganuvchi uchun zarur bilim manbayi hisoblanadi.\n<b>2.Cholg‘uni ijro pastanovkasi: </b>Siz Qashqar rubob cholg‘usining qisqacha tarixi, cholg‘u torlarini sozlanishi va tuzilishi haqida bilimga ega bo‘lganingizdan so‘ng, cholg‘uni ijro qilish uchun ko‘krak qafasda tutish va cholg‘u dastasini chap qo‘l bilan ushlash xolati bilan tanishasiz. Ushbu xolat ijrochi uchun eng muhim sanaladi. Cholg‘uni ko‘krak qafasda to‘g‘ri tutish va cholg‘u dastasini to‘g‘ri ushlash, cholg‘uda ijro qilishni yaxshi va tez o‘zlashtirish imkoniyatini beradi.\n<b>3.Mezrob (Mediator)ni urish va shtrixlar: </b>Ushbu menyuda Qashqar rubob torlariga mediatorni urish xolati animatsion harakatli xolatda ko‘rsatiladi. Ya’ni П-pasga, V-tepaga belgilarni amaliyoti haqida bilimga ega bo‘ladi. Bundan tashqari foydalanuvchi ushbu menyuda joylashtirilgan oson va sodda shtrixlarni ijro qilish malakasini ham o‘zlashtiradi. Foydalanuvchi ushbu menyudan foydalanayotganda shtrixlarni ijro qilish malakasini yaxshi o‘zlashtirishi uchun ko‘proq berilgan shtrixlar ustida ishlashi zarur. Shundagina keyingi menyuda berilgan bilimlarni o‘zlashtirishi oson va qulay kechadi.\n<b>4.Cholg‘uda tovushlar joylashuvi: </b>Qashqar rubob cholg‘usida tovush pardalar xromatik (tabiiy va tabiiy tovushlarning xosilasi ketma-ketligi) tarzda tartib bilan joylashtirilgan. Bu menyuda foydalanuvchi cholg‘u sozining har bir torida joylashgan tabiiy tovushlar bilan tanishadi. Har bir torda joylashgan tabiiy tovushlar joylashuvini o‘rganish jarayonida foydalanuvchi, ushbu menyu ijrosi bilan birgalikda o‘z qo‘lidagi cholg‘uning pardalarni barmoqlari bilan bosib, qayta-qayta tovushlar nomini aytib, ijro qilmog‘i lozim. Shundagina dasta bo‘ylab torlarda joylashgan tovush pardalarni yodlay oladi.\n<b>5.Ijro maxoratini oshiruvchi gammalar:</b> Mezrobni urish, shtrixlar va cholg‘uning torlarida joylashgan tovush pardalari bilan tanishib, kerakli bilim o‘zlashtirilgandan so‘ngina, ushbu menyuda berilgan gammalar ijrosi ustida ishlashi zarur. Berilgan gammalarni doimiy ravishda ijrosi ustida ishlab, birin-ketin barcha gammalarni 3-menyuda o‘rganilgan shtrixlar bilan ijro qilib chiqilsa va ushbu xolatni doimiy ravishda bajarsa, ijrochi biror-bir kuyni moxirona ijro qilishida keng yordam beradi.\n<b>6.Kuy ijro qilish:</b> Yuqoridagi barcha bilimlarni foydalanuvchi ziyraklik bilan o‘zlashtirgan so‘ng, foydalanuvchida ushbu menyuda berilgan kuylarni ijro qilish imkoniyati rivojlanadi. Vaholanki boshqa kuylarni ham ijro qila olish imkoniyatini beradi.</string>
    <string name="usage_title">Ilovadan foydalanish</string>
    <string name="in_detail"><u>Подробно</u></string>
    <string name="about_author">Muallif haqida</string>
    <string name="about_author_description"><b>Tursunov Husniddin Isomovich</b>\n\n1989 yil Qashqadaryo viloyati Shahrisabz shahrida tug‘ilgan. 2011-yil Abdulla Qodiriy nomidagi Toshkent Davlat Madaniyat institutini “Cholg‘u jamoalari tashkilotchisi” mutaxassisligini tomomlab, 2013-yil O’zbekiston Davlat San’at va Madaniyat institutining “Xalq cholg‘u asboblari ansambli, ashula va raqs jamoalariga rahbarlik” mutaxassisligi bo‘yicha magistraturani tamomlagan. 2014-yil Qarshi davlat universitetining qayta tayyorlov kursiga o‘qib, pedagogik faoliyat olib borish huquqini olgan. H.I.Tursunov bugungi kunda Qarshi davlat universitetining Pedagogika institutida “San’atshunoslik” kafedrasi o‘qituvchisi lavozimida faoliyat olib bormoqda. H.I.Tursunov bugunga qadar 4 ta Xalqaro va Respublika jo‘rnallarida maqolalari chop etilgan, 6 dan ziyod konferensiyalarda tezislari bilan ishtrok etgan. “Cholg‘u va ansambl” uslubiy qo‘llanma muallifi, “Shaxmatda ilk saboqlar” metodik qo‘llanmasi, “Maktab repertuari” o‘quv qo‘llanmalarning muallifi va bulardan tashqari ko‘plab milliy kuy-qo‘shiqlarni notaga olgan. Bugungi kunda erkin tadqiqodchi sifatida “Elektron ta’lim resurslari vositasida milliy musiqa cholg‘ularini mustaqil o‘rganish metodikasini takomillashtirish” mavzusida izlanishlar olib bormoqda.</string>
    <string name="history_text">Qashqar rubobi asli kelib chiqishi Sharqiy Turkiston (hozirgi Xitoyning Uyg‘ur Avtonom Okrugi)dagi Qashqar degan joy nomi bilan bog‘liq bo‘lsada, Markaziy Osiyo xalqlari o‘zbeklar, tojiklar, uyg‘urlar orasida qadimiy va ommalashgan cholg‘ulardan biri hisoblanadi. Qashqar rubobi asosan qachon va qayerda paydo bo‘lganligi haqida aniq ma’lumotlar yo‘q. O‘zbek milliy cholg‘ulari ichida eng keng tarqalgan va ommalashgan cholg‘u bo‘lib, musiqani endigina o‘zlashtirayotganlarning 50 foizidan ortig‘i ana shu musiqa asbobidan foydalanishi ma’lum. Qashqar rubob juda jarangdor, va yoqimli sadoga ega bo‘lib, nisbatan tez o‘zlashtirilishi mumkin bo‘lgan cholg‘ular qatoriga kiradi. Bu cholg‘u yakka holda va cholg‘u jamoalari tarkibida ishlatiladi. Qashqar rubobining dasta qismida asosan 24 ta metall pardalar joylashgan bo‘lib, ular rubob tovush qatoriga xromatik tarzda 0,5 tondan qilib joylashtirilgan va tartib bo‘yicha bosh qismidan kosa qismiga qarab sanaladi. Dastaning bosh qismi tomonidan yuqori harrak o‘rnatilgan bo‘lib, torlar shu yuqori harrak orqali quloqlarga taqiladi. Yuqori harrak ochiq torlarning tayanchi hisoblanadi. Dastaning kosaga tutashgan joyida fason quloqlari mavjud. Qashqar rubobni sozlashda avval 1-chi juft tori lya tovushiga sozlanib, keyin unga mos ravishda boshqa torlar sozlanadi. Torlarning sozlanganligini aniqlashda 1-torda mi tovushini bosib 2-torning ochiq tovushini chalib oktavani unison ya’ni bir xil sadolanishini eshitib ko‘rib, tekshirish mumkin. 3- tor ham huddi shu usulda tekshiriladi.\n\n<b>Qashqar rubobining torlarini kuyning diapazoniga qarab, ikki xil sozlash mumkin, bular quyidagicha:</b></string>
    <string name="rules_video_1">Ko’krak qafasida tutish</string>
    <string name="rules_video_2">Qo’l bilan tutish holati</string>
    <string name="mbt_1_tor">1-Tor</string>
    <string name="mbt_2_tor">2-Tor</string>
    <string name="mbt_3_tor">3-Tor</string>
    <string name="lya">LYA</string>
    <string name="si">SI</string>
    <string name="_do">DO</string>
    <string name="re">RE</string>
    <string name="mi">MI</string>
    <string name="fa">FA</string>
    <string name="sol">SOL</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="do_major">Do major</string>
    <string name="_3_">3.</string>
    <string name="_2_">2.</string>
    <string name="_1_">1.</string>
    <string name="play">Play</string>
    <string name="sol_major">Sol major</string>
    <string name="re_major">Re major</string>
    <string name="lya_major">Lya major</string>
    <string name="_0">0</string>
    <string name="mi_major">Mi major</string>
    <string name="si_major">Si major</string>
    <string name="_f_major">F# major</string>
    <string name="_do_major">Do# major</string>
    <string name="lya_minor">lya minor</string>
    <string name="_mi_minor">mi minor</string>
    <string name="_si_minor">si minor</string>
    <string name="_fa_minor">fa# minor</string>
    <string name="_do_minor">do# minor</string>
    <string name="_sol_minor">sol# minor</string>
    <string name="_re_minor">re# minor</string>
    <string name="_lya_minor">lya# minor</string>
    <string name="_fa_major">Fa major</string>
    <string name="_si_major">Si b major</string>
    <string name="_mi_major">Mi b major</string>
    <string name="_lya_major">Lya b major</string>
    <string name="_re_major">Re b major</string>
    <string name="_sol_major">Sol b major</string>
    <string name="re_minor">re minor</string>
    <string name="sol_minor">sol minor</string>
    <string name="do_minor">do minor</string>
    <string name="fa_minor">fa minor</string>
    <string name="_si_bemol_minor">si b minor</string>
    <string name="_mi_b_minor">mi b minor</string>
    <string name="_lya_b_minor">lya b minor</string>
    <string name="paxtaoy">Paxtaoy</string>
    <string name="allegretto">Allegretto</string>
    <string name="fattoh_nazarov_musiqasi">Fattoh Nazarov musiqasi</string>
    <string name="tursunov_husniddin_isomovich">Tursunov Husniddin Isomovich</string>
    <string name="author_name_desc">1989 yil Qashqadaryo viloyati Shahrisabz shahrida tug‘ilgan. 2011-yil Abdulla Qodiriy nomidagi Toshkent Davlat Madaniyat institutini “Cholg‘u jamoalari tashkilotchisi” mutaxassisligini tomomlab, 2013-yil O’zbekiston Davlat San’at va Madaniyat institutining “Xalq cholg‘u asboblari ansambli, ashula va raqs jamoalariga rahbarlik” mutaxassisligi bo‘yicha magistraturani tamomlagan. 2014-yil Qarshi davlat universitetining qayta tayyorlov kursiga o‘qib, pedagogik faoliyat olib borish huquqini olgan. H.I.Tursunov bugungi kunda Shahrisabz Davlat Pedagogika instituti “San’atshunoslik” kafedrasida o‘qituvchisi lavozimida faoliyat olib bormoqda.</string>
    <string name="Bookers">Loyiha homiylari</string>
    <string name="bookers_info">Qashqadaryo viloyat hokimiyati\n\nQashqadaryo viloyat hududiy innovatsion rivojlanish boshqarmasi\n\nShahrisabz Davlat Pedagogika instituti</string>
    <string name="kvarta">Kvarta intervali bo’yicha:</string>
    <string name="kvarta_type">1-juft tor kichik oktava <b>Lya</b>\n\n2-juft tor kichik oktava <b>Mi</b>\n\n3-yug’on tor katta oktava <b>Si</b></string>
    <string name="kvarta_type_2">1-juft tor kichik oktava <b>Lya</b>\n\n2-juft tor kichik oktava <b>Mi</b>\n\n3-yug’on tor katta oktava <b>Lya</b></string>
    <string name="kvarta_va_kvinta">Kvarta va kvinta intervallari bo’yicha:</string>
    <string name="qashqar_rubobning_tuzilishi">Qashqar rubobning tuzilishi</string>
    <string name="_1_quloqlar">1.Quloqlar\n\n2. Rubobning bosh qismi\n\n3. Shayton xarrak\n\n4. Pardalar\n\n5. Dasta6. Teri\n\n7. 1-tor\n\n8. 2-tor\n\n9. 3-tor\n\n10. Xarrak\n\n11. Ilmoqlar\n\n12. Kosa</string>
    <string name="andijon_polka">ANDIJON POLKA</string>
    <string name="allegro">Allegro</string>
    <string name="o_zbek_xalq_kuyi">O\'zbek xalq kuyi</string>
    <string name="do_loncha_n_o_zbek_xalq_qo_shig_i">Do\'loncha\n(O\'zbek xalq qo\'shig\'i)</string>
    <string name="feoktist_vasilyev_nqayta_ishlangan">Feoktist Vasilyev\nqayta ishlangan</string>
    <string name="qashqarcha">Qashqarcha</string>
    <string name="boris_giyenko_nqayta_ishlangan">Boris Giyenko\nqayta ishlangan</string>
    <string name="andante">Andante</string>
    <string name="original">Original</string>
    <string name="yallama_yorim">YALLAMA YORIM\n(O\'zbek xalq kuyi)</string>
</resources>