<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.author.AuthorFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/usage_about_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/about_author"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_15ssp"
            />

        <ImageView
            android:id="@+id/usage_author_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/author"
            app:layout_constraintTop_toBottomOf="@id/usage_about_author"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/usage_author_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/black"
            android:fontFamily="@font/source_sans_pro_regular"
            android:text="@string/tursunov_husniddin_isomovich"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/author_name_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/author_name"
            app:layout_constraintStart_toStartOf="parent"
            android:justificationMode="inter_word"
            android:text="@string/author_name_desc"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/times_new_roman"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/author_name_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/author_name_description"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/Bookers"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/times_new_roman"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/author_name_info_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/author_name_info"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/bookers_info"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/times_new_roman"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>